# backend/src/useCases/alteracao_estoque/CreateAlteracaoEstoque/CreateAlteracaoEstoqueDTO.ts
@@ -1,0 +1,9 @@
+export interface ICreateAlteracaoEstoqueRequestDTO {
+    valorAlteracao: number;
+    codigoEstoque: string;
+}
+
+export interface ICreateAlteracaoEstoqueResponseDTO {
+    message: string;
+    codigoAlteracaoEstoque: string;
+}
