# backend/src/useCases/estoques/AlterarEstoque/AlterarEstoqueDTO.ts
@@ -1,0 +1,11 @@
+export interface IAlterarEstoqueRequestDTO {
+    codigoProduto: string;
+    valorAlteracao: number;
+}
+
+export interface IAlterarEstoqueResponseDTO {
+    message: string;
+    codigoEstoque: string;
+    quantidade: number;
+    codigoProduto: string;
+}
